[gd_scene load_steps=10 format=2]

[ext_resource path="res://art/ships/ship.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.33225
height = 0.886986

[sub_resource type="Animation" id=2]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.8025, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.360784, 0.360784, 0.360784, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 5 ]
}

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 9 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 0.378929, 0.34151, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.552941, 0.160784, 0.160784, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 2.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.5, 0.65, 0.9, 1.15, 1.3, 1.55, 1.75, 1.9, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1.7411, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.666667, 0.666667, 0.666667, 0.823529 ), Color( 1, 1, 1, 1 ), Color( 0.666667, 0.666667, 0.666667, 0.823529 ), Color( 1, 1, 1, 1 ), Color( 0.666667, 0.666667, 0.666667, 0.823529 ), Color( 1, 1, 1, 1 ), Color( 0.666667, 0.666667, 0.666667, 0.823529 ), Color( 1, 1, 1, 1 ), Color( 0.666667, 0.666667, 0.666667, 0.823529 ), Color( 0.666667, 0.666667, 0.666667, 0.823529 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 1 )
vframes = 2
hframes = 5
frame = 4

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -7.5 )
scale = Vector2( 2.5, 2.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 2 )
anims/fly_left = SubResource( 3 )
anims/fly_right = SubResource( 4 )
anims/fly_straight = SubResource( 5 )
anims/hit = SubResource( 6 )
anims/respawn = SubResource( 7 )

[node name="RespawnTimer" type="Timer" parent="."]

[node name="InvincibilityTimer" type="Timer" parent="."]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
